<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tvPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_240"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/posts"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPosts" />

        <TextView
            android:id="@+id/tvfollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/_180"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textfollowing"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginEnd="16dp"
            android:text="@string/following"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvfollowing" />

        <TextView
            android:id="@+id/tvfollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/_300"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tvfollowing"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toEndOf="@+id/tvPosts"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textfollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/followers"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textfollowing"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toEndOf="@+id/textPosts"
            app:layout_constraintTop_toBottomOf="@+id/tvfollowers" />

        <TextView
            android:id="@+id/textEditProfile"
            android:layout_width="133dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/edit_your_profile"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textfollowers"
            app:layout_constraintVertical_bias="0.024"
            android:textAlignment="center"
            android:background="@drawable/grey_border"/>
    </android.support.constraint.ConstraintLayout>

</merge>